<resources>
    <string name="app_name">SOLD</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="enter_text">Enter</string>
    <string name="name_hint">Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="Address">Address</string>
    <string name="cellphone">Cellphone</string>
    <string name="type_card_text">Pay by</string>
    <string name="card_number_text">Pay by</string>
    <string name="card_due_date_text">Due date of the card</string>
    <string name="card_secure_code_text">Secure code of the card</string>
    <string name="condition_text">I agree with the terms and conditions </string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="forgot_text">Forgot your password?</string>
    <string name="not_registered_text">Not yet registered?</string>
    <string name="register_text">Register</string>
    <string name="or_register_text">Or register with:</string>
    <string name="title_activity_main">Sold</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_myAuctions">My Auctions</string>
    <string name="title_store">Store</string>
    <string name="title_register">New account</string>
    <string name="category">Category</string>
    <string name="recent">Recent</string>
    <string name="cheaper">Cheaper</string>
    <string name="store_button">Exchange your GreenCoins</string>
    <string name="quantity">Quantity: </string>
    <string name="price">Price: </string>
    <string name="store_convert">Convert GreenCoins</string>
    <string name="store_amount">Insert amount to convert here</string>
    <string name="button_convert">Convert</string>
    <string name="store_agreement">I agree to convert my GreenCoins to my local currency</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_text">Profile</string>
    <string name="auctions_history_text">Auctions history</string>
    <string name="log_out_text">Log out</string>
    <string name="duration_text">Duration</string>
    <string name="price_text">Price</string>
    <string name="title_activity_auction_information">AuctionInformationActivity</string>
    <string name="example_text">Example Text</string>
    <string name="title_activity_store_calculator">GreenCoin Calculator</string>
</resources>
