<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.soldaplication.Activities.RegisterStepTwoActivity">
    <TextView
        android:id="@+id/registerTittleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="?android:textAppearanceLarge"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/HorizontalLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTittleTextView">
        <TextView
            android:id="@+id/typeCardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_card_text"
            android:layout_margin="@dimen/margin_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <RadioButton
            android:id="@+id/visaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="Visa"
            android:checked="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/typeCardTextView"
            app:layout_constraintBottom_toBottomOf="parent" />
        <RadioButton
            android:id="@+id/mastercardRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="Mastercard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cardNumberTextInputLayout"
        android:layout_width="@dimen/default_length_space"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HorizontalLinearLayout">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/cardNumberTextInputEdit"
            android:layout_width="@dimen/default_length_space"
            android:layout_height="wrap_content"
            android:hint="@string/card_number_text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/dueDateTextInputLayout"
        android:layout_width="@dimen/default_length_space"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardNumberTextInputLayout">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/dueDateTextInputEdit"
            android:layout_width="@dimen/default_length_space"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/card_due_date_text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/secureCodeTextInputLayout"
        android:layout_width="@dimen/default_length_space"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dueDateTextInputLayout">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/secureCodeTextInputEdit"
            android:layout_width="@dimen/default_length_space"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/card_secure_code_text"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/conditionCheckBox"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/condition_text"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secureCodeTextInputLayout"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conditionCheckBox"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
