<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.soldaplication.Activity.Activities.StoreCalculatorActivity"
    tools:showIn="@layout/activity_store_calculator"
    app:layout_constraintTop_toBottomOf="@id/toolbarCalculator">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/store_convert"/>

    <TextView
        android:id="@+id/totalGCTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="@dimen/fab_margin"
        android:text="X GC"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/calculatorTextInput"
        android:layout_width="@dimen/card_default"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/totalGCTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/fab_margin"
        android:tooltipText="@string/store_amount"/>
    <Button
        android:id="@+id/calculatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calculatorTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/button_convert"/>
    <CheckBox
        android:layout_width="@dimen/default_length_space"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calculatorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/store_agreement"/>

</android.support.constraint.ConstraintLayout>
