<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.soldaplication.Activity.Activities.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/profileConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/fab"
            app:layout_constraintTop_toTopOf="@id/profileConstraint"
            app:layout_constraintStart_toStartOf="@id/profileConstraint"
            app:layout_constraintEnd_toEndOf="@id/profileConstraint">
            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:src="@drawable/ic_person_black_24dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImageView">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameTextInputEdit"
                    android:layout_width="@dimen/default_length_space"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameTextInputLayout"
                android:layout_width="@dimen/default_length_space"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastNameTextInputEdit"
                    android:layout_width="@dimen/default_length_space"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name_hint"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="@dimen/default_length_space"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameTextInputLayout" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailTextInputEdit"
                    android:layout_width="@dimen/default_length_space"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="@dimen/default_length_space"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"  >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordTextInputEdit"
                    android:layout_width="@dimen/default_length_space"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressTextInputLayout"
                android:layout_width="@dimen/default_length_space"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addressTextInputEdit"
                    android:layout_width="@dimen/default_length_space"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cellphoneTextInputLayout"
                android:layout_width="@dimen/default_length_space"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressTextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cellphoneTextInputEdit"
                    android:layout_width="@dimen/default_length_space"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/cellphone"/>
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>




    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
